--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>EDA_AS</h1>
         <img src = "">
         <p>Некий текст</p>
-        <button id = "buy">Купить:)/button>
+        <button id = "buy">Купить:)</button>
     </div>
 </body>
 </html>
