--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="Style.css">
     <title>EDA_AShop</title>
 </head>
 <body>
     <div id = "main">
         <h1>EDA_AS</h1>
-        <img src = "">
+        <img src = "IMG/logo.jpg">
         <p>Некий текст</p>
-        <button id = "buy">Купить:)/button>
+        <button id = "buy">Купить:)</button>
     </div>
 </body>
 </html>
