--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         buy.addEventListener("click", () => {
             document.getElementById("main").style.display = "none";
             document.getElementById("form").style.display = "block";
-            document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
+            document.getElementById("user_name").value = TG.initDataUnsafe.user.first_name + " " + TG.initDataUnsafe.user.last_name;
         });
 
         order.addEventListener("click", () => {
-            tg.close();
+            TG.close();
         });
     </script>
 </body>
