--- a/index.html
+++ b/index.html
@@ -38,37 +38,31 @@
         });
 
         order.addEventListener("click", () => {
-
             document.getElementById("error").innerText = "";
             let name = document.getElementById("user_name").value;
             let email = document.getElementById("user_email").value;
             let phone = document.getElementById("user_phone").value;
-
-            if(name.lenght = 0)
+            if(name.lenght == 0)
             {
                 document.getElementById("error").innerText = "Введите имя";
                 return;
             }
-
-            if(email.lenght = 0)
+            if(email.lenght == 0)
             {
                 document.getElementById("error").innerText = "Введите email";
                 return;
             }
-
             if(phone.lenght < 10)
             {
                 document.getElementById("error").innerText = "Неверно введен номер телефона";
                 return;
             }
-
             let data = {
                 name:name,
                 email:email,
                 phone:phone
             }
             TG.sendData(JSON.stringify(data));
-
             TG.close();
         });
     </script>
