--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             let name = document.getElementById("user_name").value;
             let email = document.getElementById("user_email").value;
             let phone = document.getElementById("user_phone").value;
-            if(name.lenght == 0)
+            if(name.length == 0)
             {
                 document.getElementById("error").innerText = "Введите имя";
                 return;
             }
-            if(email.lenght == 0)
+            if(email.length == 0)
             {
                 document.getElementById("error").innerText = "Введите email";
                 return;
             }
-            if(phone.lenght < 10)
+            if(phone.length < 10)
             {
                 document.getElementById("error").innerText = "Неверно введен номер телефона";
                 return;
