--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         order.addEventListener("click", () => {
             document.getElementById("error").innerText = "";
             let name = document.getElementById("user_name").value;
-            let adress = document.getElementById("user_adres").value;
+            let adres = document.getElementById("user_adres").value;
             let phone = document.getElementById("user_phone").value;
             if(name.length == 0)
             {
